--- a/Thesis.tex
+++ b/Thesis.tex
@@ -78,7 +78,7 @@ This specific style of work is not something I have been developing consciously,
 Topic of sonification is intriguing for few reasons. Firstly, it benefits from interest of various groups of people - scientists: biologists, mathematicians, creatives: musicians, sound artists and general public. Another is a belief, that this topic still has a lot of unrevealed potential. I will try to discuss this clash between scientific and artistic approach, various significant projects or artworks, as well as fields of opportunity blossoming from this duality.
 
 % Sonification definition
-Main understanding of the term \emph{sonification} is the \emph{``use of non-speech audio to convey information''}, or more precisely, it is the \emph{``transformation of data relations into perceived relations in an acoustic signal for the purposes of facilitating communication or interpretation''} \cite{Fitch}. These are definitions from probably the most relevant place to sonificication - International Community for Auditory Display, which organizes conferences and publishes books on the topic since 1992. Nicolas Collins puts it less formally, as a method for one to provide \emph{``aural alternatives to pie charts, line graphs and spreadsheets''} \cite{Collins2006}. All these quotations define it as an analytical, representative point of view, and the reasoning behind the use of the sonification in this sense is repositioning of the information from traditional semantic, visual or statistic level to sonic level giving ground to non-traditional data analysis via medium of sound or music. Interestingly, ICAD's first definition mentioning conveying \emph{information} rather than data can also give an understanding that sonification is not only about data patterns; and whether we try to sonify weather forecast, biological systems or our emotions is not important - they are all qualified.
+Main understanding of the term \emph{sonification} is the \emph{``use of non-speech audio to convey information''}, or more precisely, it is the \emph{``transformation of data relations into perceived relations in an acoustic signal for the purposes of facilitating communication or interpretation''} \cite[p.~1]{Fitch}. These are definitions from probably the most relevant place to sonificication - International Community for Auditory Display, which organizes conferences and publishes books on the topic since 1992. Nicolas Collins puts it less formally, as a method for one to provide \emph{``aural alternatives to pie charts, line graphs and spreadsheets''} \cite[p.~7]{Collins2006}. All these quotations define it as an analytical, representative point of view, and the reasoning behind the use of the sonification in this sense is repositioning of the information from traditional semantic, visual or statistic level to sonic level giving ground to non-traditional data analysis via medium of sound or music. Interestingly, ICAD's first definition mentioning conveying \emph{information} rather than data can also give an understanding that sonification is not only about data patterns; and whether we try to sonify weather forecast, biological systems or our emotions is not important - they are all qualified.
 
 I believe the analytical approach towards sonification is rather clear and well defined. Books such as Sonification Handbook \cite{Hermann2011} prove that ICAD and its fellow researchers have done exquisite work in examining of the topic from various points, resulting in apparatus allowing us, artists to built upon. Although arts and sciences have many things in common, it happens so that aesthetic approaches toward sonification projects are in my opinion quite different.
 
@@ -108,7 +108,7 @@ I have chosen Geiger counter for another reason than simply being ideal represen
 
 Geiger counter can be also viewed as representation of sub-method of sonification, \emph{audification}. To quote Sonification Handbook,  \emph{``audification is a technique of making sense of data by interpreting any kind of one-dimensional signal (or of a two-dimensional signal-like data set) as amplitude over time and playing it back on a loudspeaker for the purpose of listening.''} \cite[p.~301]{audif}
 
-Audification is sonification simplified to the most basic level. Majority of the common real-time sonifications are than audifications as well, e.g.\ listening to the whale songs or bat echolocation, where the only transformations which happen on the data are changes of the playback speed.
+Audification is sonification simplified to the most basic level. Majority of the common real-time sonifications are then audifications as well, e.g.\ listening to the whale songs or bat echolocation, where the only transformations which happen on the data are changes of the playback speed.
 
 One of the most interesting sonification works is work of Christina Kubisch \cite{ChKubisch2012}. I have chosen her as an icon of electromagnetic induction a method, even though there is a wider spectrum of artists using the same tools. She generally appears as the icon of the method, so it will not be different in my thesis. Kubisch is German sound artist born in 1948. She studied classical instruments such as flute and piano, but have later turned to studying electronics at Technical Institute of Milan. Since than she has created various sound installations, usually combining electronics and delicate sounds. In a work I would like to mention - Electrical Walks, Kubisch is focusing on audification of electromagnetic fields with the use of induction coils, headphone amplifiers and headphones. This works as a nice example of artistic audification, where the purpose seems to be in finding of interesting sounds within the world of electromagnetic fields rather than scientific analysis. 
 
@@ -137,7 +137,7 @@ His work is representative and direct, yet its main point is not to convey infor
 
 Chinen's work has been strongly connected to Institute for Algorhytmics, led by Shintaro Miyazaki. He is a post-doctoral researcher at Humboldt University in Berlin dealing with \emph{``epistemology, archeology, history and theory of everyday technologies, which store, transmit and process informations and their dynamic relation to sound, rhythms and other sorts of time-varying signals.''} \cite{Miyazaki2012}. From his projects, I want to point out his collaboration with Martin Howse \cite{howse} called \textbf{Detektors}.
 
-Detektors is \emph{``an open, collaborative project which uses sonic strategies and DIY-devices to make audible the hidden infoscapes of our time. The present website will show data, recordings and cartographies of different spectral ecologies and trans-sonic machinic agencements.''} \cite{detektors}. Website of the project contains many sound recordings of the electromagnetic fields (audifications) from radio-frequency range as well as cartographic information about such sources. It is a study of electromagnetic pollution, sonic behavior of digital devices in the context of geolocational sound recordings.
+Detektors is \emph{``an open, collaborative project which uses sonic strategies and DIY-devices to make audible the hidden infoscapes of our time. The present website will show data, recordings and cartographies of different spectral ecologies and trans-sonic machinic agencements.''} \cite{detektors}. Website of the project contains many sound recordings of the electromagnetic fields (audifications) from radio-frequency range as well as cartographic information about such sources. It is a study of the electromagnetic pollution, sonic behavior of digital devices in the context of a geolocational sound recordings.
 
 \begin{figure}  
   \centering
@@ -146,26 +146,30 @@ Detektors is \emph{``an open, collaborative project which uses sonic strategies 
 	\label{fig:detektor}
 \end{figure}
 
-For ``detection'', specially designed device is used as seen on figure ~\ref{fig:detektor}. Core of the hardware is handy logarithmic detector chip AD8313 produced by Analog Devices. This chip takes AC signals from up to 2.5 GHz  (upper border most used wireless network range is 2.4 Ghz \cite{802} and demodulates it into audible sphere. This is somehow similar to work of Kubisch, but there is a difference in the frequency spectrum target. Method using induction coils provides us only with electromagnetic AC signal within our hearing range and within the limitations of the amplifying system, but method using demodulator allows us to listen to high frequency communication, such as bluetooth and wireless radio. Interestingly, Detektors and Kubisch's work both share emphasis on placing of their sonic discoveries within cartographic space.
+For `detection', specially designed device is used as seen on figure ~\ref{fig:detektor}. Core of the hardware is logarithmic detector chip AD8313 produced by Analog Devices. This chip takes AC signals from up to 2.5 GHz  (upper border most used wireless network range is 2.4 Ghz \cite{802} and demodulates them into audible sphere. This is somehow similar to work of Kubisch, but there is a difference in the frequency spectrum target. Method using induction coils leaves us only with electromagnetic AC signal within our hearing range and within the limitations of the amplifying system, but method using demodulator allows us to listen to high frequency communication, such as bluetooth and wireless radio. Interestingly, Detektors and Kubisch's work both share emphasis on placing of their sonic discoveries within cartographic space.
+
+These works have proven to be very effective in their directivity and immediacy. One can just simply turn on the device and listen to `invisible' streams of data, constantly present and surrounding, yet unnoticed by our senses. 
+
+My wireless network sonification work is strongly related to that concept. My passion for revealing omnipresent data streams, penetrating our tissues on daily basis is possibly very similar to what has driven Kubisch or Miyazaki to build their own sonification systems.  
 
 %Sonification of objects using distance sensors.
-Another case to study and analyze might be a project of Gil Weinberg called \emph{BrainWaves}. It is based on interactive auditory research of electrical stimuli applied to \emph{in vitro} neuron cultures. I picked the project for the collision of scientific and artistic approach in the work.
+But before I jump to describing my works, I want to mention one more example of sonification project: a project of Gil Weinberg called \emph{BrainWaves}. It is based on interactive auditory research of electrical stimuli applied to \emph{in vitro} neuron cultures. I picked this work for the inherent collision of scientific and artistic approach.
 
 To briefly describe the project, \emph{BrainWaves} is \emph{``sonification installation that allows a group of players to interact with an auditory display of neural activity. The system is designed to represent electrical spike propagation in a neuron culture through sound propagation in space. Participants can simulate neural spikes by using a set of specially designed controllers, experimenting and sonically investigating the electrical activity of the brain.''} \cite[p.~9]{Weinberg2006}. The particular part which caught my interest is desire to experiment with the subject of sonification interactively. Classic idea of stream of data is missing - instead of discrete information there is a system, which needs to be sonified. As a comparison, one can imagine hitting an oil barrel in a goal of exploring its acoustic properties - physical model, where system becomes the subject.
 
 Since main subject of the auditory display is propagation pattern simulation, the authors have decided to use spatialization as key element of representation. As they argue against visual display, \emph{``sonification can be more effective than visualization in such a spatial application because the human auditory system is able to perceive synchronous spatial stimuli from every point within a space, while visual perception is limited to physical range of sight.''} \cite[p.~9]{Weinberg2006}. For the purpose, 8 speakers in space are used to provide sufficient clues for the exact propagation pattern.
 
-For the interactive standpoint, custom made drum trigger instruments were created using piezo elements to represent electrical spikes in the system. Performers are asked to hit these in specific way - after first propagation ends, performer placed closest to its ending is bound to start another one, by hitting his own instrument. At this point one could see an interesting connection between \emph{sonification} and \emph{gamification} as very close methods of bringing data streams and system under closer, possibly more understandable examination.
+For the interactive standpoint, custom made drum trigger instruments were created using piezo elements to represent electrical spikes in the system. Performers are asked to hit these in specific way - after first propagation ends, performer placed closest to its ending is bound to start another one, by hitting his own instrument. At this point one could see an interesting connection between \emph{sonification} and \emph{gamification} as a very close methods of bringing data streams and system under closer, possibly more understandable, examination.
 
-As authors conclude, the method of using almost only spatialization for auditory display purposes was not completely successful, since they noticed that part of performers was using visual representation of the process (provided during event) to orient in the process rather than simply listen to the positioning. 
+As authors conclude, the method of using almost only spatialization for auditory display purposes was not completely successful, since they noticed that part of performers was using visual representation of the process (provided during event) to orient in the process rather than simply \emph{listen} to the positioning. 
 
-From the analysis stand point, I see this work as bordering between scientific and artistic approach. The effort to analyze real scientific system combined with use of almost musical methods and instruments seems as interesting way of reaching sonologicaly relevant results. It seems that authors have not seen scientific results as a pure purpose of the work - using (musical) instruments, focus on aesthetics of the sound themselves both suggest this was not classical scientific approach.
+From the analysis stand point, I see this work as bordering between scientific and artistic approach. The effort to analyze real scientific system combined with use of almost musical methods and instruments seems as an interesting way of reaching sonologicaly relevant results. It appears that authors have not seen scientific results as a pure purpose of the work. Using (musical) instruments, focus on aesthetics of the sound themselves both suggest this was not classical scientific approach.
 
 Hopefully, at this point I have presented sufficient amount of various works which allow me to prove my point in making distinction in methods or approaches in sonification. I personally believe, that it is important to recognize artistic sonification as specific subject, since I have not found this disambiguation to be done sufficiently.
 
 \section{Wireless network sonification}
 
-As a part of my experimentation with untraditional sources for musical or generally sonic data I decided to extend my line of work on the layer of wireless networks. Project I would like to describe in this chapter is dealing with wireless network sonification as a main artistic source for sonic performance and installation. In basic terms, it catches data streams `from the air' and transforms them directly into sound using set of tools and methods. This work has been presented as a performance and an installation. In case of performance, I have used live coding technique to change the aspects of the sonification and I performed by interacting with (tampering) the data stream itself, generating artificial traffic on the network.
+As a part of my own experimentation with untraditional sources for musical or generally sonic data I decided to extend my line of work on the layer of wireless networks. Project I would like to describe in this chapter is dealing with wireless network sonification as a main artistic source for sonic performance and installation. In basic terms, it catches data streams `from the air' and transforms them directly into sound using set of tools and methods. This work has been presented as a performance and an installation. In case of performance, I have used live coding technique to change the aspects of the sonification and I performed by interacting with (tampering) the data stream itself, generating artificial traffic on the network.
 
 \subsection{Work process and technical details}
 
@@ -407,6 +411,7 @@ I have actually quite enjoyed the concept of creating installation as a system f
 
 \appendix
 \include{include/performances}
+\include{include/links}
 \onehalfspacing
 
 \bibliographystyle{apacite} 
