--- a/general.bib
+++ b/general.bib
@@ -290,6 +290,22 @@
 	Url = {http://detektors.org}
 	}
 
+@misc{icad,
+	Title = {{International Community for Auditory Display}},
+	Urldate = {May 4, 2013},
+	Year = {2010},
+	Url = {http://icad.org/}
+	}
+
+@misc{tcpdump,
+	Title = {{Manpage of TCPDUMP}},
+	Urldate = {May 4, 2013},
+	Year = {2013},
+	Url = {http://www.tcpdump.org/tcpdump_man.html}
+	}
+
+	
+
 @comment{BibDesk Static Groups{
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
