--- a/include/links.tex
+++ b/include/links.tex
@@ -1,4 +1,5 @@
 \chapter{List of links to my projects}
+\label{appendix:a}
 \singlespacing
 \begin{itemize}
 \item My personal website \\ \url{http://mrkva.ovecka.be}
